--- a/cc0pi/Makefile
+++ b/cc0pi/Makefile
@@ -1,12 +1,14 @@
-all: cc0pi_analyzer
+all: univmake cc0pi_analyzer 
 
 XGBOOST=/exp/uboone/app/users/mastbaum/xgboost/build
 
-cc0pi_analyzer: analyzer.C
-	$(CXX) $(shell root-config --cflags --libs) -I${XGBOOST}/include -I.. -L${XGBOOST}/lib64 -lxgboost -g -o $@ $^ ../stv_root_dict.o
+univmake: univmake.C 
+	$(CXX) $(shell root-config --cflags --libs) -O3 -o $@ $^
+
+cc0pi_analyzer: cc0pi_analyzer.C
+	$(CXX) $(shell root-config --cflags --libs) -I${XGBOOST}/include -I.. -L${XGBOOST}/lib64 -lxgboost -g -o $@ $^
 
 .PHONY: clean
 
 clean:
-	$(RM) cc0pi_analyzer
-
+	$(RM) univmake cc0pi_analyzer
